--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "stefi-admin",
   "version": "0.0.0",
+  "homepage": "https://nicomacias.github.io/departamentos-stefi-admin",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "npm run build && gh-pages -d dist/stefi-admin"
   },
   "private": true,
   "dependencies": {
@@ -30,6 +32,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.4",
+    "gh-pages": "^6.2.0",
     "jquery": "^3.7.1",
     "ng2-charts": "^5.0.4",
     "ngx-pagination": "^6.0.3",
