--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/stefi-admin",
+            "baseHref": "/departamentos-stefi-admin/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": ["zone.js"],
